# GNL

./: 123.txt  CMakeLists.txt  README.md  a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch  get_next_line_utils.c  main.c  user_output_buff_16_one_big_fat_line.txt
a.out.dSYM/Contents/Resources/DWARF/: a.out
